kubernetes/catalog/homer/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/A75G/docker-templates/master/templates/homer.xml
# Category: Network-Web
# Stars: 202 | Downloads: 42301566
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homer
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 100
        runAsUser: 99
        runAsGroup: 100
      containers:
        - name: homer
          image: b4bz/homer:latest
          # No environment variables defined
          ports:
            - containerPort: 8080
              protocol: TCP
              name: port
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: homer-data-0
              mountPath: "/www/assets"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: homer-data-0
        persistentVolumeClaim:
          claimName: homer-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: homer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: port
  type: ClusterIP
