kubernetes/catalog/homer/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homer.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: homer
          port: 8080
  tls:
    store:
      name: default
      namespace: traefik
